force-app/main/default/objects/vf_LearningPath__c/vf_LearningPath__c.object-meta.xml
<CustomObject>
    <label>Learning Path</label>
    <pluralLabel>Learning Paths</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Learning Path Number</label>
        <displayFormat>LP-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Object to track volunteer learning paths</description>
</CustomObject>