force-app/main/default/objects/vf_LearningPath__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <label>Created Date</label>
    <type>Date</type>
    <description>Date the learning path was created</description>
    <inlineHelpText>The date when this learning path was created</inlineHelpText>
</CustomField>