force-app/main/default/objects/vf_LearningPath__c/fields/Modules__c.field-meta.xml
<CustomField>
    <fullName>Modules__c</fullName>
    <label>Modules</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>JSON array of modules in the learning path</description>
    <inlineHelpText>List of training modules in this learning path. Stored in JSON format.</inlineHelpText>
</CustomField>