force-app/main/default/objects/vf_LearningPath__c/fields/Required_Modules__c.field-meta.xml
<CustomField>
    <fullName>Required_Modules__c</fullName>
    <label>Required Modules</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Number of required modules in the learning path</description>
    <inlineHelpText>The number of required training modules in this learning path</inlineHelpText>
</CustomField>