force-app/main/default/objects/vf_LearningPath__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <referenceTo>vf_Role__c</referenceTo>
    <relationshipLabel>Learning Paths</relationshipLabel>
    <relationshipName>Learning_Paths</relationshipName>
    <type>Lookup</type>
    <description>Role this learning path is designed for</description>
    <inlineHelpText>The role this learning path is designed to prepare the volunteer for</inlineHelpText>
</CustomField>