force-app/main/default/objects/vf_LearningPath__c/fields/Total_Modules__c.field-meta.xml
<CustomField>
    <fullName>Total_Modules__c</fullName>
    <label>Total Modules</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Total number of modules in the learning path</description>
    <inlineHelpText>The total number of training modules in this learning path</inlineHelpText>
</CustomField>