force-app/main/default/objects/vf_LearningPath__c/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <label>Volunteer</label>
    <referenceTo>vf_Volunteer__c</referenceTo>
    <relationshipLabel>Learning Paths</relationshipLabel>
    <relationshipName>Learning_Paths</relationshipName>
    <type>Lookup</type>
    <description>Volunteer on this learning path</description>
    <inlineHelpText>The volunteer following this learning path</inlineHelpText>
</CustomField>